--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
+  
+<style>
+ .container {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 100%;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    justify-items: stretch;
+    align-items: stretch;
+ }
+</style>
+  
 <body>
-
+  <div class="container">
+    
+  </div>
 </body>
 
 </html>
