--- a/index.html
+++ b/index.html
@@ -8,13 +8,47 @@
   <meta name="description" content="Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+	<link href="./style/_compiled.css" rel="stylesheet">
+	
 </head>
   
 <body>
-  <div class="container">
-    
+  <div class="container-width">
+		
+		<div class="row">
+			<div class="sidebar-left col-md-2 ">
+				<h2>Sidebar</h2>
+				<ul>
+					<li>
+						<a href="#last">Last</a>
+					</li>
+				</ul>
+			</div>
+			<div class="offset-md-2 col-md-10 main-content">
+				<div class="content-body">
+					<h2>James Paulo Saballegue</h2>
+					<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					</p>
+
+					<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					</p>
+
+					<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					</p>
+
+					<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					</p>
+
+					<p id='last'>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					</p>
+				</div>
+			</div>		
+		</div>
   </div>
 </body>
 
