--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="./style/_compiled.css" rel="stylesheet">
+	<link href="style/_compiled.css" rel="stylesheet">
 	
 </head>
   
