--- a/index.html
+++ b/index.html
@@ -2,54 +2,74 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Portfolio</title>
-  <meta name="author" content="James Saballegue">
-  <meta name="description" content="Portfolio">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<title>Portfolio</title>
+	<meta name="author" content="James Saballegue">
+	<meta name="description" content="Portfolio">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="style/compiled.css" rel="stylesheet" type="text/css" />
-	
+	<script src="lib/jquery/jquery-3.3.1.min.js"></script>
+	<script src="lib/bootstrap/bootstrap.bundle.min.js">	</script>
+
 </head>
-  
+
 <body>
-  <div class="container-width">
-		
-		<div class="row">
-			<div class="sidebar-left col-md-2 ">
-				<h2>Sidebar</h2>
-				<ul>
-					<li>
-						<a href="#last">Last</a>
-					</li>
-				</ul>
+	<div class="container-width darkspace">
+
+		<div class="row d-none d-sm-block">
+			<!-- Greater than or equal Medium Screens only-->
+			<div class="sidebar-left col-md-2">
+				<div class="sidebar-body col-12">
+					
+					<ul class="sidebar-links">
+						<li>
+							<a href="#first">Expertise</a>
+						</li>
+						<li>
+							<a>Experience</a>
+						</li>
+
+						<li>
+							<a href="#last">Contact</a>
+						</li>
+					</ul>
+
+				</div>
 			</div>
-			<div class="offset-md-2 col-md-10 main-content">
-				<div class="content-body">
+			<div class="main-content offset-md-2 col-md-10">
+				<div class="main-body col-12">
 					<h2>James Paulo Saballegue</h2>
-					<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+					<p id="first">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 					</p>
 
 					<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 					</p>
 
 					<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 					</p>
 
 					<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 					</p>
 
 					<p id='last'>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum. 
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 					</p>
 				</div>
-			</div>		
+			</div>
 		</div>
-  </div>
+
+
+	</div>
 </body>
 
 </html>
