--- a/index.html
+++ b/index.html
@@ -18,63 +18,58 @@
 <body>
 	<div class="container-width darkspace">
 
-		<div class="row d-none d-sm-block">
+		<div class="d-none d-sm-block">
 			<!-- Greater than or equal Medium Screens only-->
 			<div class="sidebar-left col-sm-3">
 				<div class="sidebar-body col-12">
-					<b id="progress"></b>
+					
 					<div class="sidebar-links">
-						<div class="sidebar-timeline"></div>
 						<div class="sidebar-link-item">
-							<a id="link-expertise" href="#first">Expertise</a>
-						</div>
-						<div class="sidebar-link-item"><a>????</a></div>
-						<div class="sidebar-link-item"><a>????</a></div>
-						<div class="sidebar-link-item"><a>????</a></div>
-						<div class="sidebar-link-item"><a>????</a></div>
-						<div class="sidebar-link-item"><a>????</a></div>
-						<div class="sidebar-link-item">
-							<a id="link-experience" href="#second">Experience</a>
+							<a id="link-first" href="#">Profile</a>
 						</div>
 						<div class="sidebar-link-item">
-							<a id="link-contact" href="#last">Contact</a>
+							<a id="link-second" href="#">Projects</a>
+						</div>
+						<div class="sidebar-link-item">
+							<a id="link-third" href="#">Expertise</a>
+						</div>
+						<div class="sidebar-link-item">
+							<a id="link-last" href="#">Education</a>
 						</div>
 					</div>
+
+					<b id="progress" style="position: fixed;"></b>
 
 				</div>
 			</div>
 			<div class="main-content col-sm-9 offset-sm-3 ">
-				<div class="main-body">
-					<h2>James Paulo Saballegue</h2>
-					<p id="first">
-						<h3>First</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</p>
+				<div class="row">
+						<div class="main-body col-sm-12">
 
-					<p>
-						<h3>???</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</p>
-
-					<p id='second'>
-						<h3>Second</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</p>
-
-					<p>
-						<h3>???</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</p>
-
-					<p id='last'>
-						<h3>Last</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</p>
+								<div class="main-section" id="first">
+									<h2>James Paulo Saballegue</h2>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+								</div>
+			
+								<div class="main-section" id='second'>
+									<h3>Second</h3>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+								</div>
+			
+								<div class="main-section" id='third'>
+									<h3>Third</h3>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+								</div>
+			
+								<div class="main-section" id='last'>
+									<h3>Last</h3>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+								</div>
+							</div>
 				</div>
 			</div>
 		</div>
