--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 	<div class="container-width darkspace">
 
-		<div class="d-none d-sm-block">
+		<div class="">
 			<!-- Greater than or equal Medium Screens only-->
-			<div class="sidebar-left col-sm-3">
+			<div class="sidebar-left d-none d-sm-block col-sm-3">
 				<div class="sidebar-body col-12">
 					
 					<div class="sidebar-links">
@@ -42,34 +42,31 @@
 
 				</div>
 			</div>
-			<div class="main-content col-sm-9 offset-sm-3 ">
-				<div class="row">
-						<div class="main-body col-sm-12">
+			<div class="main-content col-sm-9 offset-sm-3 col-xl-7">
+				<div class="main-body col-sm-12">
+					<div class="main-section" id="first">
+						<h2>James Paulo Saballegue</h2>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
 
-								<div class="main-section" id="first">
-									<h2>James Paulo Saballegue</h2>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-								</div>
-			
-								<div class="main-section" id='second'>
-									<h3>Second</h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-								</div>
-			
-								<div class="main-section" id='third'>
-									<h3>Third</h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-								</div>
-			
-								<div class="main-section" id='last'>
-									<h3>Last</h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-									ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-								</div>
-							</div>
+					<div class="main-section" id='second'>
+						<h3>Second</h3>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
+
+					<div class="main-section" id='third'>
+						<h3>Third</h3>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
+
+					<div class="main-section" id='last'>
+						<h3>Last</h3>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
 				</div>
 			</div>
 		</div>
