--- a/index.html
+++ b/index.html
@@ -16,62 +16,58 @@
 </head>
 
 <body>
-	<div class="container-width darkspace">
+	<div class="darkspace h-100">
 
-		<div class="">
-			<!-- Greater than or equal Medium Screens only-->
-			<div class="sidebar-left d-none d-sm-block col-sm-3">
-				<div class="sidebar-body col-12">
-					
-					<div class="sidebar-links">
-						<div class="sidebar-link-item">
-							<a id="link-first" href="#">Profile</a>
-						</div>
-						<div class="sidebar-link-item">
-							<a id="link-second" href="#">Projects</a>
-						</div>
-						<div class="sidebar-link-item">
-							<a id="link-third" href="#">Expertise</a>
-						</div>
-						<div class="sidebar-link-item">
-							<a id="link-last" href="#">Education</a>
-						</div>
+		<!-- Greater than or equal Medium Screens only-->
+		<div class="sidebar-left d-none d-sm-block col-sm-3">
+			<div class="sidebar-body col-12">
+				
+				<div class="sidebar-links">
+					<div class="sidebar-link-item">
+						<a id="link-first" href="#">Profile</a>
 					</div>
-
-					<b id="progress" style="position: fixed;"></b>
-
+					<div class="sidebar-link-item">
+						<a id="link-second" href="#">Projects</a>
+					</div>
+					<div class="sidebar-link-item">
+						<a id="link-third" href="#">Expertise</a>
+					</div>
+					<div class="sidebar-link-item">
+						<a id="link-last" href="#">Education</a>
+					</div>
 				</div>
+
+				<b id="progress" style="position: fixed;"></b>
+
 			</div>
-			<div class="main-content col-sm-9 offset-sm-3 col-xl-7">
-				<div class="main-body col-sm-12">
-					<div class="main-section" id="first">
-						<h3>James Paulo Saballegue</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</div>
+		</div>
+		<div class="main-content h-100 col-sm-9 offset-sm-3">
+			<div class="main-body h-100">
+				<div class="main-section h-100" id="first">
+					<h3>James Paulo Saballegue</h3>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+				</div>
 
-					<div class="main-section" id='second'>
-						<h3>Second</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</div>
+				<div class="main-section h-100" id='second'>
+					<h3>Second</h3>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+				</div>
 
-					<div class="main-section" id='third'>
-						<h3>Third</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</div>
+				<div class="main-section h-100" id='third'>
+					<h3>Third</h3>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+				</div>
 
-					<div class="main-section" id='last'>
-						<h3>Last</h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-					</div>
+				<div class="main-section h-100" id='last'>
+					<h3>Last</h3>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 				</div>
 			</div>
 		</div>
-
-
 	</div>
 </body>
 
