--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
 
 <body>
 	<div class="darkspace h-100">
-
-		<!-- Greater than or equal Medium Screens only-->
-		<div class="sidebar-left d-none d-sm-block col-sm-3">
+		<div class="sidebar-left d-none d-sm-block col-sm-2 parallax-nebula">
 			<div class="sidebar-body col-12">
-				
 				<div class="sidebar-links">
 					<div class="sidebar-link-item">
 						<a id="link-first" href="#">Profile</a>
@@ -36,32 +33,32 @@
 						<a id="link-last" href="#">Education</a>
 					</div>
 				</div>
-
 				<b id="progress" style="position: fixed;"></b>
-
 			</div>
 		</div>
-		<div class="main-content h-100 col-sm-9 offset-sm-3">
+		<!-- Greater than or equal Medium Screens only-->
+		<div class="main-content h-100 col-sm-10 offset-sm-2">
+		
 			<div class="main-body h-100">
-				<div class="main-section h-100" id="first">
+				<div class="main-section h-100 parallax-nebula" id="first">
 					<h3>James Paulo Saballegue</h3>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
 					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 				</div>
 
-				<div class="main-section h-100" id='second'>
+				<div class="main-section h-100 parallax-moon" id='second'>
 					<h3>Second</h3>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
 					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 				</div>
 
-				<div class="main-section h-100" id='third'>
+				<div class="main-section h-100 parallax-nightsky" id='third'>
 					<h3>Third</h3>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
 					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
 				</div>
 
-				<div class="main-section h-100" id='last'>
+				<div class="main-section h-100 parallax-dawn" id='last'>
 					<h3>Last</h3>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
 					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
