disable parallax on mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div class="darkspace h-100">
-		<div class="sidebar-left d-none d-sm-block col-sm-2 parallax-nebula">
+		<div class="sidebar-left d-none d-sm-block col-sm-2">
 			<div class="sidebar-body col-12">
 				<div class="sidebar-links">
 					<div class="sidebar-link-item">
@@ -40,7 +40,7 @@
 		<div class="main-content h-100 col-sm-10 offset-sm-2">
 		
 			<div class="main-body h-100">
-				<div class="main-section h-100 parallax-nebula" id="first">
+				<div class="main-section h-100" id="first">
 					<h3>James Paulo Saballegue</h3>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
 					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
