my face and parallax

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
 						<a id="link-first" href="#">Profile</a>
 					</div>
 					<div class="sidebar-link-item">
-						<a id="link-second" href="#">Projects</a>
+						<a id="link-second" href="#">Expertise</a>
 					</div>
 					<div class="sidebar-link-item">
-						<a id="link-third" href="#">Expertise</a>
-					</div>
-					<div class="sidebar-link-item">
-						<a id="link-last" href="#">Education</a>
+						<a id="link-third" href="#">Projects</a>
 					</div>
 				</div>
 				<b id="progress" style="position: fixed;"></b>
@@ -41,27 +38,32 @@
 		
 			<div class="main-body h-100">
 				<div class="main-section h-100" id="first">
-					<h3>James Paulo Saballegue</h3>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					<div class="content wrapper-overlay-dark">
+						<div class="text-center wrapper-my-face">
+							<img src="https://i.imgur.com/sXRuK1P.png" alt="myFace" class="img-fluid rounded" />
+						</div>
+						
+						<h1 class="text-center">JAMES PAULO SABALLEGUE</h1>
+						
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
 				</div>
 
-				<div class="main-section h-100 parallax-moon" id='second'>
-					<h3>Second</h3>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+				<div class="main-section h-100" id='second'>
+					<div class="content wrapper-overlay-light">
+						<h3>Second</h3>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
 				</div>
 
-				<div class="main-section h-100 parallax-nightsky" id='third'>
-					<h3>Third</h3>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
-				</div>
-
-				<div class="main-section h-100 parallax-dawn" id='last'>
-					<h3>Last</h3>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
-					ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+				<div class="main-section h-100" id='third'>
+					<div class="content wrapper-overlay-dark">
+						<h3>Third</h3>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis, odio sit amet maximus pulvinar, libero arcu tincidunt mi, facilisis malesuada velit arcu vel diam. Suspendisse orci urna, interdum a purus ac, auctor ultricies lacus. Donec bibendum nisl
+						ac sem cursus tincidunt. Nullam libero est, imperdiet sed mattis sit amet, pharetra eu ipsum.
+					</div>
 				</div>
 			</div>
 		</div>
