--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Titillium+Web&display=swap" rel="stylesheet">
   <script src="lib/jquery/jquery-3.3.1.min.js"></script>
   <script src="lib/bootstrap/bootstrap.bundle.min.js"></script>
 
@@ -28,31 +28,97 @@
             </div>
             <div class="expo__statement">
               <div class="expo__message border__effect-softui">
-                <div class="expo__message-header">JAMES SABALLEGUE</div>
-                <div class="expo__message-body">i build web apps</div>
+                <div class="expo__message-header text-serif">JAMES SABALLEGUE</div>
+                <div class="expo__message-body text-sans">I build web apps whether you like it or not</div>
               </div>
             </div>
           </div>
           <div class="expo__poweredby">
-            Powered by: coffee
+            Powered by: Coffee
           </div>
         </div>
 
+        <div id="expertise">
+          <div class="expo__header">
+            <div class="title-1">
+              Expertise
+            </div>
+          </div>
+
+          <div class="expo__header">
+            <div class="title-2">
+              Frontend
+            </div>
+            <div>
+              ReactJs
+              Bootstrap
+              ES6, HTML5, CSS3
+              Sass
+            </div>
+          </div>
+
+          <div class="expo__header">
+            <div class="title-2">
+              Backend
+            </div>
+            <div>
+              NodeJs
+              Express
+              MeteorJs
+              MongoDB
+              CouchDB
+            </div>
+          </div>
+
+          <div class="expo__header">
+            <div class="title-2">
+              Tools
+            </div>
+            <div>
+              Git
+              Docker
+              DigitalOcean
+            </div>
+          </div>
+        </div>
+
+
         <div id="experience">
+          <div class="expo__header">
+            <div class="title-1">
+              Experience
+            </div>
+          </div>
           <div class="expo-reverse">
             <div class="expo__image-frame">
               <!-- <img class="expo__image-profile" src="./res/images/profilepic.png" alt="James Saballegue Face"> -->
               <div class="expo__image-project-1 border__effect-softui"></div>
             </div>
             <div class="expo__statement">
-              <div class="expo__message-project-1 border__effect-softui">
+              <div class="expo__message border__effect-softui">
                 <div class="expo__message-header">Property Management System</div>
                 <div class="expo__message-body">The All in One Web App for Independent Hoteliers</div>
               </div>
             </div>
           </div>
           <div class="expo__poweredby">
-            Powered by: coffee
+            Powered by: MeteorJs
+          </div>
+
+          <div class="expo">
+            <div class="expo__image-frame">
+              <!-- <img class="expo__image-profile" src="./res/images/profilepic.png" alt="James Saballegue Face"> -->
+              <div class="expo__image-project-1 border__effect-softui"></div>
+            </div>
+            <div class="expo__statement">
+              <div class="expo__message border__effect-softui">
+                <div class="expo__message-header">CATALYST</div>
+                <div class="expo__message-body">Tour Booking System for Joiners <br/>Synthesized Tour and Social Media</div>
+              </div>
+            </div>
+          </div>
+          <div class="expo__poweredby">
+            Powered by: MeteorJs
           </div>
         </div>
         
